# tree-sitter-cairo

./: CHANGELOG.md  Cargo.toml  binding.gyp  cairo_0.js  cairo_1.js  grammar.js  package.json
.github/workflows/: publish.yml
bindings/node/: binding.cc  index.js
bindings/rust/: README.md  lib.rs
bindings/swift/: cairo.h
examples/cairo-snippets/: python-strings.cairo  simple.cairo  string-repeat.cairo
queries/: highlights.scm  indents.scm
script/: parse-examples
src/: grammar.json  node-types.json  parser.c  scanner.c
