[package]
name = "tree-sitter-cairo"
description = "Cairo grammar for tree-sitter"
version = "0.0.1"
authors = [
	"Amaan Qureshi <amaanq12@gmail.com>",
	"Blaž Hrastnik <blaz@mxxn.io>",
	"Scott Piriou",
]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "cairo"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/amaanq/tree-sitter-cairo"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.9"

[build-dependencies]
cc = "1.0"
